provide already existing alerts in production to slack