@@ -19,7 +19,9 @@ public enum Ab2dEnvironment {
 
     public static final List<Ab2dEnvironment> ALL = List.of(LOCAL, DEV, SANDBOX, IMPL, PRODUCTION_VALIDATION, PRODUCTION);
 
-    public static final List<Ab2dEnvironment> PROD_LIST = Collections.singletonList(PRODUCTION);
+    public static final List<Ab2dEnvironment> PROD_LIST = List.of(PRODUCTION);
+
+    public static final List<Ab2dEnvironment> PUBLIC_LIST = List.of(PRODUCTION, SANDBOX);
 
     // Name typically expected in application.eventlogger.properties config
     // or passed in as env variable during startup
